# python-starter

./: pyproject.toml
.cursor/rules/: ai-engineer.mdc  code-quality.mdc  context-organizer.mdc  context7.mdc  debugger.mdc  implement.mdc  python-dx-optimizer.mdc  python-expert.mdc  python-pro.mdc  python-tdd.mdc  system-memory.mdc
