[tool.poetry]
name = "voice-control-demo"
version = "0.1.0"
description = ""
authors = ["Sang Dang <sang@dang.to>"]
license = "GPL3"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python main.py"
